heroku test for mean

--- a/mean/client/fakeid/src/app/app.component.html
+++ b/mean/client/fakeid/src/app/app.component.html
@@ -6,7 +6,7 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<h2>Here comes FakeID in MEAN</h2>
+<h2>Here comes FakeID in MEAN lalala</h2>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
