cypress test integrated

--- a/lamp/style.css
+++ b/lamp/style.css
@@ -5,6 +5,6 @@
 
 .singleUser {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   border-bottom: 1px solid grey;
 }
