api create user

--- a/lamp/style.css
+++ b/lamp/style.css
@@ -29,3 +29,17 @@ align-items: center;
 .menu-right:last-child{
   padding-right: 0;
 }
+
+form{
+  display:grid;
+  grid-template-columns: 1fr;
+}
+label{
+  display:grid;
+  grid-template-columns: 1fr;
+}
+input{
+  padding:10px;
+  border-radius: 5px;
+  outline: none;
+}
