--- a/lamp/style.css
+++ b/lamp/style.css
@@ -92,10 +92,7 @@ option {
 .labelRadio input{
   display: none;
 }
-input[type="radio"]:checked+label{
-  border:4px solid lightgray;
-}
-input[type="checkbox"]:checked+label{
+input:checked+label{
   border:4px solid lightgray;
 }
 input, select{
