--- a/lamp/style.css
+++ b/lamp/style.css
@@ -314,7 +314,7 @@ box-shadow: 4px 6px 15px rgba(0,0,0,.3);
   text-transform: capitalize;
   animation: show .1s forwards;
   transition: all .2s;
-  margin:1rem;
+  margin:auto;
 }
 .close{
   position: absolute;
