--- a/lamp/style.css
+++ b/lamp/style.css
@@ -8,6 +8,13 @@ body{
   margin:0;
   max-width: 100vw;
 }
+.hidden{
+  display:none;
+}
+
+.spouseVisible{
+  display:block;
+}
 h2{
   text-align: center;
 }
