--- a/mern/client/fakeid/src/App.css
+++ b/mern/client/fakeid/src/App.css
@@ -1,3 +1,17 @@
 h2{
   text-align: center;
 }
+
+.loader{
+  position: absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom: right;
+  width: 100vw;
+  height:100%;
+  background:white;
+  display:grid;
+  align-content: center;
+  justify-content: center;
+}
