--- a/mern/client/fakeid/src/components/header.css
+++ b/mern/client/fakeid/src/components/header.css
@@ -7,7 +7,7 @@
 .menu ul{
     justify-self: right;
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr .5fr;
     padding:0;
     grid-gap:2rem;
 }
@@ -19,3 +19,26 @@
     color:black;
     text-decoration: none;
 }
+.tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  .tooltip svg{
+    width:20px;
+  }
+  .tooltip .tooltiptext {
+    color: black;
+    padding: 1rem;
+    border-radius: 6px;
+    visibility: hidden;
+    position: absolute;
+    width: 200px;
+    background-color: lightgrey;
+    z-index: 1;
+    top: 19px;
+    right: 91%;
+  }
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
