user info formatted in BE

--- a/mern/client/fakeid/src/App.css
+++ b/mern/client/fakeid/src/App.css
@@ -15,3 +15,15 @@ h2{
   align-content: center;
   justify-content: center;
 }
+
+
+button, .button{
+  border-radius: 10px;
+  border:1px solid lightgrey;
+  padding:10px;
+  color:black;
+  text-decoration: none;
+  background:lightgrey;
+  text-align: center;
+  margin:auto;
+}
