integration test for create user

--- a/lamp/style.css
+++ b/lamp/style.css
@@ -92,7 +92,7 @@ form{
   visibility: visible;
 }
 input[type=submit]{
-  background:red;
+  background:#E15554;
   box-shadow: 1px 5px 10px rgba(0,0,0,.3);
   color:white;
   border:none;
