style for mern frontend

--- a/mern/client/fakeid/src/App.css
+++ b/mern/client/fakeid/src/App.css
@@ -1,7 +1,25 @@
+*{
+  box-sizing: border-box;
+}
+html{
+  height: 100%;
+  /* background: #F4F4F6; */
+ }
+body, #root, .App{
+  height: 100%;
+  max-height: 80vh;
+}
 h2{
   text-align: center;
 }
-
+h1,h2,h3{
+  font-style: italic;
+}
+.App>div{
+  height: 100%;  
+  display: grid;
+  align-content: center;
+}
 .loader{
   position: absolute;
   top:0;
@@ -16,14 +34,23 @@ h2{
   justify-content: center;
 }
 
+a.active{
+  font-weight: bold;
+}
 
-button, .button{
+button, .button, .labelRadio label{
   border-radius: 10px;
-  border:1px solid lightgrey;
-  padding:10px;
-  color:black;
+  padding:.5rem 2rem;
+  color:white;
   text-decoration: none;
-  background:lightgrey;
+  background:#5D576B;
   text-align: center;
   margin:auto;
 }
+
+
+button:focus{
+  outline: none;
+}
+
+
