--- a/mern/client/fakeid/src/css/header.css
+++ b/mern/client/fakeid/src/css/header.css
@@ -2,7 +2,19 @@
     display:grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
-    padding:0 2rem;
+    padding:1rem 2rem;
+    align-self: start;
+    /* background-color: #96C0B7; */
+
+}
+.logo{
+  font-size: 1.8rem;
+  border-top:1px solid black;
+  border-bottom:1px solid black;
+  width: 7rem;
+  font-style: italic;
+  font-weight: bold;
+  letter-spacing: 4px;
 }
 .menu ul{
     justify-self: right;
