--- a/mern/client/fakeid/src/css/singleUser.css
+++ b/mern/client/fakeid/src/css/singleUser.css
@@ -2,20 +2,23 @@
     padding: 0;
     margin:auto auto 3rem;
     max-width: 700px;
-    border:1px solid #d8dbe2ba;
+    width: 100%;
+    height: 65vh;
+    background:#f5f5f5;
     border-radius: 10px;
-    box-shadow: 4px 6px 15px rgba(0,0,0,.3);
 }
 .singleUserPage h1{
-    padding:1rem
+    padding:1rem 2rem
   }
   .userInfo{
     padding:0 1rem 1rem 1rem;
   }
   .userInfo p{
     margin-top:.1rem;
+    padding-left:1rem;
   }
   .userInfo h4{
+    padding-left:1rem;
     margin-bottom: .1rem;
   }
 .tabs{
@@ -25,19 +28,18 @@
   .tabs button{
     width: 100%;
     box-shadow: none;
-    color:#E15554;
     margin:0;
+    color:black;
     border-radius: 0 10px 0 0;
     background: transparent;
     text-transform: uppercase;
     border:none;
-    border-bottom: 1px solid #d8dbe2ba;
     }
     .tabs .active{
-        border:none;
+      border:none;
+      background: #dcdcdc;
     }
   .tabs button:nth-child(1  ){
     border-radius: 10px 0 0 0;
     border-right:1px solid #d8dbe2ba;
   }
-
