--- a/mern/client/fakeid/src/css/overview.css
+++ b/mern/client/fakeid/src/css/overview.css
@@ -7,3 +7,31 @@
     grid-template-columns: 1fr .5fr .5fr .5fr .5fr;
     border-bottom: 1px solid lightgrey;
 }
+
+
+.filtersAndSortContainer{
+    transition: all .2s;
+    /* max-height: 0;
+    overflow: hidden; */
+    width:auto;
+    display:grid;
+    grid-template-columns: 2fr .6fr;
+    margin:1rem 5rem;
+    width:auto;
+    align-content: start;
+}
+
+.sorters.labelRadio{
+    grid-template-columns: 1fr;    
+}
+
+
+.filterBtn{
+    margin: 1rem auto;
+    text-transform: uppercase;
+    border:none;
+    display: block;
+    background:none;
+    box-shadow: none;
+    color: black;
+  }
