--- a/mern/client/fakeid/src/App.css
+++ b/mern/client/fakeid/src/App.css
@@ -5,9 +5,7 @@
 h2{
   text-align: center;
 }
-h1,h2,h3{
-  font-style: italic;
-}
+
 
 .loader{
   position: absolute;
@@ -35,6 +33,8 @@ button, .button, .labelRadio label{
   background:#5D576B;
   text-align: center;
   margin:auto;
+  outline:none;
+  border:none;
 }
 
 
