--- a/mean/client/fakeid/src/styles.scss
+++ b/mean/client/fakeid/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
+*{
+box-sizing: border-box;
+}
+
+body{
+    font-family: 'Roboto';
+    margin:0;
+    padding:0;
+}
+
+button{
+    border-radius: 10px;
+    border:none;
+    outline:none;
+    margin:auto;
+    background:rgb(59, 122, 182);
+    color:white;
+    padding:1rem 2rem;
+}
