--- a/mean/client/fakeid/src/styles.scss
+++ b/mean/client/fakeid/src/styles.scss
@@ -9,12 +9,12 @@ box-sizing: border-box;
 }
 
 
-button{
-    border-radius: 10px;
-    border:none;
-    outline:none;
-    margin:auto;
-    background:rgb(59, 122, 182);
-    color:white;
-    padding:1rem 2rem;
-}
+// button{
+//     border-radius: 10px;
+//     border:none;
+//     outline:none;
+//     margin:auto;
+//     background:rgb(59, 122, 182);
+//     color:white;
+//     padding:1rem 2rem;
+// }
