--- a/mean/client/fakeid/src/app/components/menu/menu.component.html
+++ b/mean/client/fakeid/src/app/components/menu/menu.component.html
@@ -4,15 +4,14 @@
         <a
         routerLink="/"
         routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }"
-        >Overview</a
-      >
-  
-      <a
-      routerLink="/create"
-      routerLinkActive="active"
-      [routerLinkActiveOptions]="{ exact: true }"
-      >Create</a
-    >
+        [routerLinkActiveOptions]="{ exact: true }">
+            Overview
+        </a>
+        <a
+        routerLink="/create"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }">
+            Create
+        </a>
     </div>
 </nav>
