view for create user

--- a/mean/client/fakeid/src/app/pages/overview/overview.component.html
+++ b/mean/client/fakeid/src/app/pages/overview/overview.component.html
@@ -2,7 +2,7 @@
 <div class="usersContainer" *ngFor='let user of users'>
     <div class="singleUser" >
         <h3>{{user.name}}</h3>
-        <p>{{user.isChild}}</p>
+        <p>{{user.isChild?"Child":"Adult"}}</p>
         <p>{{user.gender}}</p>
         <p *ngIf='user.isEmployee'>Employee</p>
         <p *ngIf='!user.isEmployee'></p>
