ciew for sort and search

--- a/mean/client/fakeid/src/app/pages/edit-user/edit-user.component.scss
+++ b/mean/client/fakeid/src/app/pages/edit-user/edit-user.component.scss
@@ -45,7 +45,10 @@ input.mat-input-element {
 .formItem {
   display: grid;
 }
-
+.viewContainer, .editContainer{
+  margin:0 auto;
+  max-width: 500px;
+}
 .viewContainer .btncontainer button {
   background-color: dimgrey;
   color: white;
