--- a/mean/client/fakeid/src/app/components/notification/notification.component.html
+++ b/mean/client/fakeid/src/app/components/notification/notification.component.html
@@ -1,13 +1,7 @@
 <strong><h2 mat-dialog-title>FakeId</h2></strong>
 
 <mat-dialog-content class="mat-typography">
-  <p>
-User updated
-  </p>
-
-
-
-
+  <p>{{data.text}}</p>
 </mat-dialog-content>
 
 <mat-dialog-actions>
