--- a/mean/client/fakeid/src/app/components/filters/filters.component.html
+++ b/mean/client/fakeid/src/app/components/filters/filters.component.html
@@ -14,36 +14,33 @@
         />
         </mat-form-field>
     </div>
+    <mat-expansion-panel hideToggle>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            SHOW FILTERS
+          </mat-panel-title>
 
-    <div class="filtersAndSorters">
-
-        <div class="filters">
-            <h3>Filters go here</h3>
-        </div>
-        
-        <div class="sorters">
-            <h3>Sort By</h3>
-            <div class="sorterTitle">
-                <span (click)="sortUsers('sortByName')">Name </span>
-            <!-- <div class="material-icons" *ngIf="sortArrows.sortByName == true">
-                arrow_upward
+        </mat-expansion-panel-header>
+        <div class="filtersAndSorters">
+            <div class="filters">
+                <h3>Filters go here</h3>
             </div>
-            <div class="material-icons" *ngIf="sortArrows.sortByName == false">
-                arrow_downward
-            </div> -->
-            </div>
-        
-        
-            <div class="sorterTitle">
-                <span (click)="sortUsers('sortByIsAge')">Age </span>
-            <!-- <div class="material-icons" *ngIf="sortArrows.sortByAge == true">
-                arrow_upward
-            </div>
-            <div class="material-icons" *ngIf="sortArrows.sortByAge == false">
-                arrow_downward
-            </div> -->
+            <div class="sorters">
+                <h3>Sort By</h3>
+                <div class="sorterTitle">
+                    <button mat-raised-button (click)="sortUsers('sortByName')">Name </button>
+                </div>
+                       
+                <div class="sorterTitle">
+                    <button mat-raised-button (click)="sortUsers('sortByAge')">Age </button>
+                </div>
             </div>
         </div>
 
-    </div>
+      </mat-expansion-panel>
+
+       
+        
+        
+
 </div>
