--- a/mean/client/fakeid/src/styles.scss
+++ b/mean/client/fakeid/src/styles.scss
@@ -4,6 +4,9 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
+$actionButtonColor: #258191;
+$linkButtonColor: #255b91;
+
 *{
 box-sizing: border-box;
 }
