--- a/mean/client/fakeid/src/app/pages/overview/overview.component.scss
+++ b/mean/client/fakeid/src/app/pages/overview/overview.component.scss
@@ -17,3 +17,13 @@
         }
     }
 }
+.searchBar, .mat-form-field{
+    width: 80%;
+    margin:auto;
+}
+.searchBar{
+    margin: 2rem auto 1rem;
+}
+.mat-form-field{
+    display: block;
+}
