sort and search, search e2e test

--- a/mean/client/fakeid/src/app/pages/overview/overview.component.html
+++ b/mean/client/fakeid/src/app/pages/overview/overview.component.html
@@ -1,4 +1,6 @@
 
+<div class="topContainer">
+
 <div class="form-group searchBar">
     <mat-form-field class="example-full-width">
     <mat-label>Search by name</mat-label>
@@ -13,9 +15,38 @@
     />
     </mat-form-field>
 </div>
-<app-filters (sortByEvent)="handleSort($event)" ></app-filters>
 
-<div class="usersContainer" *ngFor='let user of users'>
+    
+    <mat-expansion-panel hideToggle>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            SHOW FILTERS
+          </mat-panel-title>
+
+        </mat-expansion-panel-header>
+        <div class="filtersAndSorters">
+            <div class="filters">
+                <h3>Filters go here</h3>
+            </div>
+            <div class="sorters">
+                <h3>Sort By</h3>
+                <div class="sorterTitle">
+                    <button mat-raised-button (click)="sortUsers('sortByName')">Name </button>
+                </div>
+                       
+                <div class="sorterTitle">
+                    <button mat-raised-button (click)="sortUsers('sortByAge')">Age </button>
+                </div>
+            </div>
+        </div>
+
+      </mat-expansion-panel>       
+        
+
+</div>
+
+
+<div class="usersContainer" *ngFor='let user of sortedUsers'>
     <div class="singleUser" >
         <h3>{{user.name}}</h3>
         <p>{{user.isChild?"Child":"Adult"}}</p>
