--- a/mean/client/fakeid/src/app/pages/overview/overview.component.scss
+++ b/mean/client/fakeid/src/app/pages/overview/overview.component.scss
@@ -49,4 +49,7 @@
         margin:auto;
         flex-grow: 0;
     }
+    button.clicked{
+        background-color: darken(#258191, 15%) !important;
+    }
 }
